# Araki_2023

./: .gitignore  README.md  pyproject.toml
notebooks/: functionalities.ipynb  generatemodel.ipynb
