[tool.poetry]
authors = ["Araki, Amane <araki@morphometrics.jp>, Noshita, Koji <noshita@morphometrics.jp>"]
description = ""
name = "araki_2023"
version = "1.1.0"

[tool.poetry.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.0.16"
jupytext = "^1.11.2"
matplotlib = "^3.4.2"
numpy = "^1.20.3"
pandas = "^1.2.4"
plotly = "^4.14.3"
python = "~3.7.10"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
